Continued by updating the soundBank classes as well as the soundTracks.